--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "luxon": "^2.1.1",
+    "newt-client-js": "^1.0.2",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
