--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "core-js": "^3.15.1",
     "luxon": "^2.1.1",
+    "markdown-it": "^12.2.0",
+    "markdown-it-plain-text": "^0.3.0",
     "newt-client-js": "^1.0.2",
     "nuxt": "^2.15.7"
   },
