--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "html-to-text": "^8.1.0",
     "luxon": "^2.1.1",
-    "markdown-it": "^12.3.2",
-    "markdown-it-plain-text": "^0.3.0",
     "newt-client-js": "^2.0.0",
     "nuxt": "^2.15.7"
   },
