--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "prettier": "^2.3.2"
-  }
+  },
+  "author": "Newt, Inc.",
+  "license": "MIT"
 }
