--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prettier": "^2.3.2"
   },
   "author": "Newt, Inc.",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "newt"
+  ],
 }
